add div containing page links

--- a/index.html
+++ b/index.html
@@ -16,5 +16,15 @@
     <li>flushing the toilet</li>
     <li>listening to your neighbors</li>
   </ul>
+
+  <div id="learn-more">
+    <p>Learn more about our resort!</p>
+    <ul>
+      
+      <li><a href="accomodations.html">Accomodations</a></li>
+      <li><a href="activities.html">Activites</a></li>
+      <li><a href="arrangements.html">Travel Arrangements</a></li>
+    </ul>
+  </div>
 </body>
 </html>
